Improve code and refactoring